# indy-did-resolver

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml
.github/workflows/: container-release.yaml  docker-image.yaml  pull-request-test.yaml
docker/: Dockerfile
indy-did-driver/: .gitignore  Cargo.toml
indy-did-driver/genesis-files/: eesdi  sovrin  sovrin:builder  sovrin:staging
indy-did-driver/networks/sovrin/: pool_transactions_genesis.json
indy-did-driver/src/: main.rs
indy-didresolver/: Cargo.toml
indy-didresolver/src/: did.rs  did_document.rs  error.rs  ledger.rs  lib.rs  resolver.rs  responses.rs
