[package]
name = "indy-did-driver"
version = "0.1.0"
authors = ["Paul Bastian <paul.bastian@bdr.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-executor = "0.3.17"
indy-didresolver = { path = "../indy-didresolver" , version = "0.1.0" }
#indy-vdr = { path = "../../indy-vdr/libindy_vdr" , version = "0.3.4" }
indy-vdr = "0.3.4"
serde = "1.0"
serde_json = "1.0"
rouille = "3.5.0"