[package]
name = "indy-did-driver"
version = "0.2.0"
authors = ["Paul Bastian <paul.bastian@bdr.de>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-executor = "0.3.17"
git2 = "0.14.2"
indy-vdr = { git = "https://github.com/domwoe/indy-vdr", branch = "ffi-resolver" }
serde = "1.0"
serde_json = "1.0"
rouille = "3.5.0"
regex = "1.5.4"
clap = { version = "3.1.3", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"

[features]
derive = []
