[package]
name = "indy-didresolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
indy-vdr = { path = "../../indy-vdr/libindy_vdr" , version = "0.3.4" }
serde = "1.0"
serde_json = "1.0"