[package]
name = "indy-didresolver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.12"
futures-executor = "0.3.17"
regex = "1.5.4"
#indy-vdr = { path = "../../indy-vdr/libindy_vdr" , version = "0.3.4" }
indy-vdr = "0.3.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.2.2"

[dev-dependencies]
rstest = "0.12"